src/test/deca/context/valid/class_decl/field_public_int.deca
// Description:
//    Déclaration d'une classe avec un attribut int
//
// Resultats:
//    Aucune erreur
// 
// Historique:
//    cree le 01/01/2016

class test {
	int a;
}

{

}

